# Pill-Engine

./: .gitignore  Cargo.toml  README.md
crates/pill_core/: Cargo.toml
crates/pill_core/src/: bitmask_utils.rs  error.rs  lib.rs  math.rs  pill_slotmap.rs  pill_twinmap.rs  pill_typemap.rs  utils.rs
crates/pill_engine/: Cargo.toml  build.rs
crates/pill_engine/res/shaders/: master.frag  master.vert
crates/pill_engine/res/shaders/built/: master.frag.spv  master.vert.spv
crates/pill_engine/src/: config.rs  egui.rs  engine.rs  lib.rs  net.rs
crates/pill_engine/src/audio/: mod.rs
crates/pill_engine/src/ecs/: allocator.rs  bitmask_controller.rs  bitmask_map.rs  camera_component.rs  component.rs  component_map.rs  component_storage.rs  deferred_update_component.rs  entity.rs  entity_builder.rs  entity_fetcher.rs  health_component.rs  mesh_rendering_component.rs  mod.rs  name_component.rs  rendering_system.rs  scene.rs  scene_manager.rs  system_manager.rs  transform_component.rs
crates/pill_engine/src/ecs/components/: audio_listener_component.rs  audio_manager_component.rs  audio_source_component.rs  camera_component.rs  component.rs  component_storage.rs  deferred_update_component.rs  egui_manager_component.rs  input_component.rs  mesh_rendering_component.rs  mod.rs  time_component.rs  transform_component.rs  world_audio_component.rs
crates/pill_engine/src/ecs/systems/: audio_system.rs  deferred_update_system.rs  egui_system.rs  input_system.rs  mod.rs  rendering_system.rs  system_manager.rs  time_system.rs
crates/pill_engine/src/graphics/: mod.rs  render_queue.rs  renderer.rs
crates/pill_engine/src/input/: input_component.rs  input_event.rs  input_system.rs  mod.rs
crates/pill_engine/src/resources/: material.rs  mesh.rs  mod.rs  resource.rs  resource_manager.rs  resource_mapxxx.rs  resource_storage.rs  sound.rs  texture.rs
crates/pill_engine/src/time/: mod.rs  time_component.rs  time_system.rs
crates/pill_headless/: Cargo.toml
crates/pill_headless/src/: main.rs
crates/pill_launcher/: Cargo.toml
crates/pill_launcher/res/templates/: game_cargo_template.txt  game_config_template.txt  game_script_template.txt  game_template.txt
crates/pill_launcher/res/templates/Pill-Default/: Cargo.toml
crates/pill_launcher/src/: main.rs
crates/pill_net/: Cargo.toml
crates/pill_net/src/: lib.rs
crates/pill_renderer/: Cargo.toml  build.rs
crates/pill_renderer/res/shaders/: master.frag  master.vert
crates/pill_renderer/res/shaders/built/: master.frag.spv  master.vert.spv
crates/pill_renderer/src/: camera.rs  egui.rs  egui_integration.rs  instance.rs  lib.rs  material.rs  mesh.rs  model.rs  pipeline.rs  renderer.rs  renderer_resource_storage.rs  texture.rs
crates/pill_renderer/src/resources/: instance.rs  mod.rs  renderer_camera.rs  renderer_material.rs  renderer_mesh.rs  renderer_pipeline.rs  renderer_texture.rs
crates/pill_standalone/: Cargo.toml  build.rs
crates/pill_standalone/res/: icon.raw
crates/pill_standalone/src/: main.rs
docs/engine_dev/: .rustc_info.json
docs/engine_dev/doc/: crates.js  search-index.js  settings.html  source-files.js
docs/engine_dev/doc/implementors/lazy_static/: trait.LazyStatic.js
docs/engine_dev/doc/pill_core/: all.html  enum.EngineError.html  fn.create_bitmask_from_range.html  fn.create_bitmask_with_one.html  fn.enum_variant_eq.html  fn.get_enum_variant_type_name.html  fn.get_game_error_message.html  fn.get_indices_of_set_elements.html  fn.get_type_name.html  fn.get_value_type_name.html  fn.validate_asset_path.html  index.html  macro.define_component_handle!.html  macro.define_component_handle.html  macro.define_new_pill_slotmap_key!.html  macro.define_new_pill_slotmap_key.html  sidebar-items.js  struct.PillSlotMap.html  struct.PillSlotMapKeyData.html  struct.PillTwinMap.html  struct.PillTypeMap.html  trait.PillSlotMapKey.html  trait.PillStyle.html  trait.PillTypeMapKey.html  type.Color.html  type.Matrix3f.html  type.Vector2f.html  type.Vector2i.html  type.Vector3f.html  type.Vector3i.html
docs/engine_dev/doc/pill_core/bitmask_utils/: fn.create_bitmask_from_range.html  fn.create_bitmask_with_one.html  fn.get_indices_of_set_elements.html  index.html  sidebar-items.js
docs/engine_dev/doc/pill_engine/: all.html  index.html  sidebar-items.js
docs/engine_dev/doc/pill_game/: all.html  index.html  sidebar-items.js  struct.Game.html
docs/engine_dev/doc/pill_renderer/: all.html  index.html  sidebar-items.js
docs/engine_dev/doc/pill_standalone/: all.html  fn.main.html  index.html
docs/game_dev/: .rustc_info.json
docs/game_dev/doc/: crates.js  search-index.js  settings.html  source-files.js
docs/game_dev/doc/pill_engine/: all.html  index.html
examples/Empty/: .gitignore  Cargo.toml  README.md
examples/Empty/res/: config.ini
examples/Empty/src/: game.rs  lib.rs
examples/Floating-Pills/: Cargo.toml  README.md
examples/Floating-Pills/res/: config.ini
examples/Floating-Pills/src/: game.rs
examples/Italian-Brainrot/: .gitignore  Cargo.toml  README.md
examples/Italian-Brainrot/res/: config.ini
examples/Italian-Brainrot/src/: game.rs  lib.rs
examples/pills/: Cargo.toml
examples/pong/: Cargo.toml  build.rs  config.ini
examples/pong/res/: config.ini
examples/pong/res/models/: Sphere.mtl
examples/pong/src/: game.rs  lib.rs
pill/src/core/: Cargo.toml
pill/src/core/src/: lib.rs  types.rs
pill/src/engine/: Cargo.toml
pill/src/engine/src/: ecs.rs  engine.rs  gameobject.rs  input.rs  lib.rs  resources.rs  scene.rs
pill/src/engine/src/ecs/: component.rs  component_map.rs  component_storage.rs  entity.rs  mesh_rendering_component.rs  transform_component.rs
pill/src/engine/src/graphics/: material.rs  renderer.rs
pill/src/engine/src/input/: input_event.rs
pill/src/engine/src/resources/: mesh.rs  resource_manager.rs  resource_storage.rs  texture.rs
pill/src/graphics/: Cargo.toml  build.rs
pill/src/graphics/res/shaders/: shader.wgsl
pill/src/graphics/src/: model.rs  renderer.rs  texture.rs
pill_standalone/: Cargo.toml
pill_standalone/src/: main.rs
scripts/: build_engine.ps1
(+627 files in other folders)
