[package]
name = "pill-standalone"
version = "0.1.0"
authors = [
    # Extend this list when submiting PR
    "Mateusz Szymoński <mateusz.szymonski@gmail.com>"
    ]
edition = "2018"
resolver = "2"

[dependencies]
pill-core = {path = "../pill/src/core"}
pill-engine = {path = "../pill/src/engine", features = ["internal"]}
pill-game = {path = "../../pill_pong"} # This needs to be pointing to the correct game directory
pill-graphics = {path = "../pill/src/graphics"}

winit = "0.25"
env_logger = "0.9.0"
log = "0.4"