[package]
name = "pill_engine"
version = "0.1.0"
authors = [
    # Extend this list when submiting PR
    "Mateusz Szymoński <mateusz.szymonski@gmail.com>"
    ]
edition = "2018"
resolver = "2"

[dependencies]
pill_core = {path = "../pill_core"}

cgmath = "0.18"
winit = "0.25"
cfg-if = "1.0.0"
anyhow = "1.0.45"
thiserror = "1.0.30"
indexmap = "1.7.0"
boolinator = "2.4.0"
typemap_rev = "0.1.5"
env_logger = "0.9.0"
log = "0.4"
itertools = "0.10.1"

[features]
game = []
internal = []