[package]
name = "pill_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
pill_core = {path = "../pill_core"}

# Data containers
indexmap = "1.7.0"

# Errors
anyhow = "1.0.45"
thiserror = "1.0.30"

# Loggers
env_logger = "0.9.0"
log = "0.4"

# Loaders
image = "0.23"
tobj = "3.0"

# Audio
rodio = { version = "0.14", default-features = false, features = ["wav", "mp3"] }

# Other
readonly = "0.2"
cgmath = "0.18"
winit = "0.25"
cfg-if = "1.0.0"
boolinator = "2.4.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
lazy_static = "1.4.0"
config = "0.11"
dyn-clone = "1.0.4"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[features]
game = []
internal = []