[package]
name = "pill_headless"
version = "0.1.0"
edition = "2021"

[dependencies]
pill_engine = { path = "../pill_engine", default-features = false, features = ["server", "internal"] }
pill_net    = { path = "../pill_net" } # maybe needed?
anyhow      = "1"
log         = "0.4"
env_logger  = "0.11"                              # newer than engine, up to you
config      = "0.11"
cgmath      = "0.18"                              # if you touch transforms here

