[package]
name = "pill_renderer"
version = "0.1.0"
authors = [
    # Extend this list when submiting PR
    "Mateusz Szymoński <mateusz.szymonski@gmail.com>"
    ]
edition = "2018"
resolver = "2"

[dependencies]
pill_core = {path = "../pill_core"}
pill_engine = {path = "../pill_engine", features = ["internal"]}

# Data containers
slotmap = "1.0.6"
slab = "0.4.5"

# Loaders
image = "0.23"
tobj = "3.0"

# Errors
anyhow = "1.0"

# Logging
env_logger = "0.9.0"
log = "0.4"



winit = "0.25"
cgmath = "0.18"
wgpu = { version = "0.11", features = [ "spirv" ] }
futures = "0.3"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }

