[package]
name = "pill_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
pill_core = {path = "../pill_core"}
pill_engine = {path = "../pill_engine", features = ["internal"]}

# Data containers
slotmap = "1.0.6"
slab = "0.4.5"

# Loaders
image = "0.23"
tobj = "3.0"

# Errors
anyhow = "1.0"

# Logging
env_logger = "0.9.0"
log = "0.4"

# Other
winit = "0.26"
cgmath = "0.18"
wgpu = { version = "0.12", features = [ "spirv" ] }
futures = "0.3"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
config = "0.11"

# egui
egui = "0.16.0"
epi = "0.16"
egui_winit_platform = "0.13"
egui_wgpu_backend = "0.16.0"
egui_demo_lib = "0.16.0"