[package]
name = "pill_standalone"
version = "0.1.0"
authors = [
    # Extend this list when submiting PR
    "Mateusz Szymoński <mateusz.szymonski@gmail.com>"
    ]
edition = "2018"
resolver = "2"

[dependencies]
pill_core = {path = "../pill_core"}
pill_engine = {path = "../pill_engine", features = ["internal"]}
pill_renderer = {path = "../pill_renderer"}

# Game project dependency. This needs to be pointing to the correct game directory
pill_game = {path = "D:\\Programming\\Rust\\Pill-Engine\\examples\\pong\\"} # This needs to be pointing to the correct game directory

winit = "0.25"
env_logger = "0.9.0"
pretty_env_logger = "0.4.0"
log = "0.4"
chrono = "0.4.19"
colored = "2.0.0"
rust-ini = "0.17.0"

