[package]
name = "pill_standalone"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
pill_core = {path = "../pill_core"}
pill_engine = {path = "../pill_engine", features = ["internal"]}
pill_renderer = {path = "../pill_renderer"}

# Game project dependency. This needs to be pointing to the correct game directory
pill_game = {path = "D:/Programming/Rust/pill_project/Pill-Engine/examples/pong"}

winit = "0.25"
env_logger = "0.9.0"
pretty_env_logger = "0.4.0"
log = "0.4"
chrono = "0.4.19"
colored = "2.0.0"
config = "0.11"
anyhow = "1.0.45"

[build-dependencies]
winres = "0.1"
