[package]
name = "pill_standalone"
version = "0.1.0"
edition = "2021"

[dependencies]
pill_core = {path = "../pill_core"}
pill_engine = {path = "../pill_engine", features = ["internal"]}
pill_renderer = {path = "../pill_renderer"}

# Game project dependency. This needs to be pointing to the correct game directory
pill_game = {path = "/home/jduchniewicz/Projects/Sticky-Piston-Studios/Pill-Engine/examples/Floating-Pills"}

image = "0.25"
winit = "0.29"
env_logger = "0.9.0"
pretty_env_logger = "0.4.0"
log = "0.4"
chrono = "0.4.19"
colored = "2.0.0"
config = "0.11"
anyhow = "1.0.45"

[build-dependencies]
winres = "0.1"
