[package]
name = "pill_game"
version = "0.1.0"
edition = "2018"
resolver = "2"

[dependencies]
pill_engine = {path = "D:/Programming/Rust/pill_project/Pill-Engine/crates/pill_engine", features = ["game"]}
cgmath = "0.18"
rand = "0.8.4"

# Audio
rodio = { version = "0.14", default-features = false, features = ["mp3", "wav"] }
