[package]
name = "pill-engine"
version = "0.1.0"
authors = [
    # Extend this list when submiting PR
    "Mateusz Szymoński <mateusz.szymonski@gmail.com>"
    ]
edition = "2018"
resolver = "2"

[dependencies]
pill-core = {path = "../core"}

cgmath = "0.18"
winit = "0.25"
cfg-if = "1.0.0"

[features]
game = []
internal = []