[package]
name = "pill-graphics"
version = "0.1.0"
authors = [
    # Extend this list when submiting PR
    "Mateusz Szymoński <mateusz.szymonski@gmail.com>"
    ]
edition = "2018"

[dependencies]
pill-core = {path = "../core"}
pill-engine = {path = "../engine"}

image = "0.23"
winit = "0.25"
cgmath = "0.18"
env_logger = "0.8"
log = "0.4"
wgpu = "0.9"
futures = "0.3"
pollster = "0.2"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
tobj = "3.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"